[FIX] Gap in glow effect

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -34,6 +34,7 @@ body {
 }
 
 .header-image {
+  position: relative;
   display: flex;
   align-items: center;
   width: 30%;
@@ -62,8 +63,10 @@ body {
 }
 
 .glow-animation {
-  // width: 2%;
-  // height: 2%;
+  position: absolute;
+  top: 1px; // Fix for gap in glow effect
+  width: 100%;
+  height: 95%; // Fix for gap in glow effect
   border-radius: 25%;
   animation: glow 2.5s infinite alternate;
 }
